--- a/portfolio.html
+++ b/portfolio.html
@@ -12,111 +12,41 @@
         <ul>
             <li><a href="#about">About Me</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#resume">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 </header>
 <section id="about">
     <h1>About Me</h1>
-    <p>Name: Varney Weeks</p>
-    <p>Education: [Your Education Details]</p>
-    <p>Bio: [Your Bio]</p>
-    <p>Skills: [Your Skills]</p>
-    <p>Testimonials: [Testimonials]</p>
+    <p>Name: Varney J.T Weeks</p>
+    <p>Education: Bluecrest University</p>
+    <p>Bio: I'm a freshman in Bluecrest University,
+        I live Fishmarket with my Mom and I'm 17 years of age </p>
+    <p>Skills: Web development</p>
 </section>
 <section id="projects">
     <h1>Projects</h1>
     <div class="project">
-        <h2>Project Title</h2>
-        <p>Description: [Project Description]</p>
-        <p><a href="#">View Project</a></p>
+        <h2>Portfolio</h2>
+        <p>Description: Its a project about me with my portfolio in it.</p>
+        <p><a href="Myportfolio.iml">View Project</a></p>
     </div>
     <!-- Add more projects here -->
-</section>
-<section id="resume">
-    <h1>Resume</h1>
-    <p><a href="#">Download Resume</a></p>
-    <p>Skills: [Your Skills]</p>
-    <p>Education: [Your Education Details]</p>
-    <p>Experience: [Your Experience]</p>
+
 </section>
 <section id="contact">
     <h1>Contact</h1>
-    <form action="#" method="post">
-        <label for="name">Name:</label>
+    <form action="0770398885 / 0886016761" method="post">
+        <label for="Varney Weeks">Name:</label>
         <input type="text" id="name" name="name">
-        <label for="email">Email:</label>
+        <label for="varneyweeks0@gmail.com">Email:</label>
         <input type="email" id="email" name="email">
-        <label for="message">Message:</label>
+        <label for="I would love to be apart of your program">Message:</label>
         <textarea id="message" name="message"></textarea>
         <input type="submit" value="Submit">
     </form>
-    <p>Social Media: [Social Media Links]</p>
-    <p>Email: [Your Email]</p>
-</section>
-<footer>
-    <p>&copy; 2024 Varney Weeks - All rights reserved</p>
-    <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
-</footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Varney Weeks - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<header>
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-<section id="about">
-    <h1>About Me</h1>
-    <p>Name: Varney Weeks</p>
-    <p>Education: [Your Education Details]</p>
-    <p>Bio: [Your Bio]</p>
-    <p>Skills: [Your Skills]</p>
-    <p>Testimonials: [Testimonials]</p>
-</section>
-<section id="projects">
-    <h1>Projects</h1>
-    <div class="project">
-        <h2>Project Title</h2>
-        <p>Description: [Project Description]</p>
-        <p><a href="#">View Project</a></p>
-    </div>
-    <!-- Add more projects here -->
-</section>
-<section id="resume">
-    <h1>Resume</h1>
-    <p><a href="#">Download Resume</a></p>
-    <p>Skills: [Your Skills]</p>
-    <p>Education: [Your Education Details]</p>
-    <p>Experience: [Your Experience]</p>
-</section>
-<section id="contact">
-    <h1>Contact</h1>
-    <form action="#" method="post">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email">
-        <label for="message">Message:</label>
-        <textarea id="message" name="message"></textarea>
-        <input type="submit" value="Submit">
-    </form>
-    <p>Social Media: [Social Media Links]</p>
-    <p>Email: [Your Email]</p>
+    <p>Social Media: varney weeks </p>
+    <p>Email: varneyweeks0@gmail.com</p>
 </section>
 <footer>
     <p>&copy; 2024 Varney Weeks - All rights reserved</p>
