--- a/portfolio.html
+++ b/portfolio.html
@@ -1,56 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Varney Weeks - Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<header>
-    <nav>
-        <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-</header>
-<section id="about">
-    <h1>About Me</h1>
-    <p>Name: Varney J.T Weeks</p>
-    <p>Education: Bluecrest University</p>
-    <p>Bio: I'm a freshman in Bluecrest University,
-        I live Fishmarket with my Mom and I'm 17 years of age </p>
-    <p>Skills: Web development</p>
-</section>
-<section id="projects">
-    <h1>Projects</h1>
-    <div class="project">
-        <h2>Portfolio</h2>
-        <p>Description: Its a project about me with my portfolio in it.</p>
-        <p><a href="Myportfolio.iml">View Project</a></p>
-    </div>
-    <!-- Add more projects here -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>THE EXECUTIVE MANSION</title>
+        <link rel="stylesheet" href="mansionStyle.css" />
+    </head>
+    <body>
+        <div class="general">
+            <div class="veryTop">
+                <img
+                    src="images/liberiaSeal.jpg"
+                    alt="The Executive Mansion Logo"
+                    class="logo" />
+                <p class="logoText">THE EXECUTIVE MANSION</p>
+            </div>
+            <div class="navBar">
+                <ul class="navList">
+                    <li class="home"><a href="#">Home</a></li>
+                    <li class="president"><a href="#">The President</a></li>
+                    <li class="vicePresident"><a href="#">The Vice
+                            President</a></li>
+                    <li class="firstLady"><a href="#">The First Lady</a></li>
+                    <li class="mos"><a href="#">MOS</a></li>
+                    <li class="opportunities"><a href="#">Opportunities</a></li>
+                    <li class="media"><a href="#">Media</a></li>
+                    <li class="contact"><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="firstContent">
+                <div class="presidentImage">
+                    <img src="images/joeBoikai.jpg"
+                        alt="Picture of the president" />
+                </div>
+                <div class="rightTexts">
+                    <h2 class="blueText">
+                        President Boakai Condemns Recent Israel and Iran
+                        Conflick, Calls for
+                        Restoration of Peace.
+                    </h2>
+                    <div class="redLine"></div>
+                    <p>
+                        President Joseph Nyuma Boakai, Sr. has condemned the
+                        recent
+                        escalation of violent conflit between Israel and Iran
+                        and finds it
+                        deeply regretful that political and diplomatic efforts
+                        have yet to
+                        bring peace and stability to the Middle East.
+                    </p>
+                </div>
+            </div>
+            <div class="secondContent">
+                <div class="vicePresident">
+                    <div class="grayBox">
+                        <img src="images/VP Koon.jpg" alt class="vpImage">
+                        <div class="grayBackground">
+                            <p class="vpName">Honorable Jeremiah Kpan Koung</p>
+                            <p class="vpTitle">Vice President of Liberia</p>
+                        </div>
 
-</section>
-<section id="contact">
-    <h1>Contact</h1>
-    <form action="0770398885 / 0886016761" method="post">
-        <label for="Varney Weeks">Name:</label>
-        <input type="text" id="name" name="name">
-        <label for="varneyweeks0@gmail.com">Email:</label>
-        <input type="email" id="email" name="email">
-        <label for="I would love to be apart of your program">Message:</label>
-        <textarea id="message" name="message"></textarea>
-        <input type="submit" value="Submit">
-    </form>
-    <p>Social Media: varney weeks </p>
-    <p>Email: varneyweeks0@gmail.com</p>
-</section>
-<footer>
-    <p>&copy; 2024 Varney Weeks - All rights reserved</p>
-    <p><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
-</footer>
-</body>
+                    </div>
+
+                </div>
+                <div class="verticalLine"></div>
+                <div class="newsReleases">
+                    <p class="newsHeadline">NEWS & PRESS RELEASES</p>
+
+                    <div class="miniNews">
+                        <p class="date">MONDAY, APRIL 15,2024</p>
+                        <p class="newTitle">President Boakai Resigns from JNB
+                            Foundation Board as Chairman, Annnounces
+                            Successor</p>
+                    </div>
+                    <div class="miniNews">
+                        <p class="date">MONDAY, APRIL 15,2024</p>
+                        <p class="newTitle">President Boakai Praises Liberia's
+                            Surfing Potential</p>
+                    </div>
+                    <div class="miniNews">
+                        <p class="date">MONDAY, APRIL 15,2024</p>
+                        <p class="newTitle">President Boakai Condemns Recent
+                            Israel and Iran Conflict, Calls for Restoration of
+                            Peace.</p>
+                    </div>
+                    <div class="miniNews">
+                        <p class="date">MONDAY, APRIL 11,2024</p>
+                        <p class="newTitle">President Boakai Nominates and
+                            Appoints Additional Officials To Government</p>
+                    </div>
+                    <div class="miniNews">
+                        <p class="date">MONDAY, APRIL 9,2024</p>
+                        <p class="newTitle">As Ramadan Draws to a Close,
+                            President Boakai Fetes Liberian Muslims To An Iftar
+                            Dinner</p>
+                    </div>
+                    <div class="miniNews">
+                        <p class="date">MONDAY, APRIL 8,2024</p>
+                        <p class="newTitle">President Boakai Sets Up
+                            Inter-Agency Committee On Unprocessed Natural
+                            Rubber</p>
+                    </div>
+                </div>
+                <div class="verticalLine"></div>
+                <div class="recentDocument">
+                    <h4>RECENT DOCUMENTS</h4>
+                    <div class="documents">
+                        <p>PRESIDENT BOAKAI REMARKS AT THE RAMADAN DINNER AT THE
+                            MINISTERIAL COMPLEX APRIL 5, 2024</p>
+                    </div>
+                    <div class="documents">
+                        <p>Special Remarks Delivered By H.E. Joseph Nyuma
+                            Boakai, Sr. President of the Republic of Liberia at
+                            the Graduation Ceremony of the At-Risk Youth
+                            Empowerment Program (AR-YEP) Thursday, April 11,
+                            2024 EJS Ministerial Complex, Congo Town,
+                            Liberia</p>
+                    </div>
+                    <div class="documents">
+                        <p>Executive Order No. 128 - Suspension of surcharge on
+                            Petroleum Pricing Structure.pdf</p>
+                    </div>
+                    <div class="documents">
+                        <p>President Boakai Issues Executive Order #127
+                            Exempting LWSC From Customs Duties</p>
+                    </div>
+                    <div class="documents">
+                        <p>Special Ramadan message Issued by His Excellency
+                            Joseph N. Boakai, Sr. President of the Republic of
+                            Liberia On the occasion of the start of 2024 ISLAMIC
+                            HOLY MONTH OF RAMADAN Sunday, March 10, 2024</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
